iota.log
*** Error compiling 'iota/command_line/iota_bulletproof.py'...
  File "iota/command_line/iota_bulletproof.py", line 32
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_process.py'...
  File "iota/command_line/iota_process.py", line 61
    except IOTATermination, e:
                          ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_run.py'...
  File "iota/command_line/iota_run.py", line 86
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/command_line/iota_single_image.py'...
  File "iota/command_line/iota_single_image.py", line 165
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_cctbx.py'...
  File "iota/components/iota_cctbx.py", line 284
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_dials.py'...
  File "iota/components/iota_dials.py", line 52
    except Exception, e:
                    ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_input.py'...
  File "iota/components/iota_input.py", line 373
    except Sorry,e:
                ^
SyntaxError: invalid syntax

*** Error compiling 'iota/components/iota_threads.py'...
  File "iota/components/iota_threads.py", line 740
    os.chmod(autoindex_filename, 0755)
                                    ^
SyntaxError: invalid token

*** Error compiling 'iota/components/iota_utils.py'...
  File "iota/components/iota_utils.py", line 404
    except Exception, e:
                    ^
SyntaxError: invalid syntax

